# hedgehog

./: .gitattributes  Makefile  README.md  install-hedgehog.bash  pyproject.toml
bash/: hedgehog.bash  hedgehog.bash.m4
hedgehog/: __init__.py  help.py  menu.py  meta.json  tool.py
hedgehog/diff/: __main__.py  colordiff.py
hedgehog/dirstack/: dirstack.py  main.py
hedgehog/fzfdirs/: bookmarks.py  main.py
hedgehog/git/: branch.py  checkout.py  commit.py  common.py  fixup.py  lstree.py  rmbranch.py
hedgehog/ssh/: __main__.py  ansible.py  main.py
sample/: bookmarks.yaml
tests/: conftest.py  test_colordiff.py  test_hedgehog.py
tests/dirstack/: test_dirstack.py
tests/ssh/: conftest.py  test_ansible.py  test_main.py
