[tool.poetry]
name = "hedgehog"
version = "0.1.0"
description = "Random and somewhat useful tools"
authors = ["Aksel Sjögren <akselsjogren@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/akselsjogren/hedgehog"

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.poetry.scripts]
hhdiff = "hedgehog.diff.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
