[tool.poetry]
name = "hedgehog"
version = "0.2.0"
description = "Random and somewhat useful tools"
authors = ["Aksel Sjögren <akselsjogren@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/akselsjogren/hedgehog"
include = ["bash/*"]
exclude = ["hedgehog/tool.py"]

[tool.poetry.dependencies]
python = "^3.9"
termcolor = "^1.1.0"
simple-term-menu = "^0.10.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
toml = "^0.10.2"

[tool.poetry.scripts]
git-fixup = "hedgehog.git.fixup:main_wrap"
git-cob = "hedgehog.git.checkout:main_wrap"
hedgehog = "hedgehog.help:main"
hhdiff = "hedgehog.diff.__main__:main"
sshansible = "hedgehog.ssh.main:main_wrap"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
